--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Use Clear Sans for -like typography */
+/* Use Clear Sans for Wordle-like typography */
 body, h1, .key, .tile, .toast {
   font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
   color: #121213;
@@ -81,21 +81,21 @@ h1 {
   animation: flip 0.6s ease-in-out forwards;
 }
 .correct {
-  background-color: #8b5cf6;
-  border-color: #8b5cf6 !important;
+  background-color: #6aaa64 !important;
+  border-color: #6aaa64 !important;
   box-shadow: 0px 2px 0px #538d4e !important;
   color: #ffffff !important;
 }
 .present {
-  background-color: #06b6d4;
-  border-color: #06b6d4 !important;
+  background-color: #c9b458 !important;
+  border-color: #c9b458 !important;
   box-shadow: 0px 2px 0px #b59f3b !important;
   color: #ffffff !important;
 }
 .absent {
-  background-color: #334155;
-  border-color: #334155 !important;
-  box-shadow: 0px 2px 0px #111827 !important;
+  background-color: #787c7e !important;
+  border-color: #787c7e !important;
+  box-shadow: 0px 2px 0px #3a3a3c !important;
   color: #ffffff !important;
 }
 #keyboard {
@@ -128,18 +128,18 @@ h1 {
   flex: 1.5;
 }
 .key.correct {
-  background-color: #8b5cf6;
+  background-color: #6aaa64 !important;
   box-shadow: 0px 3px 0px #538d4e !important;
   color: #ffffff !important;
 }
 .key.present {
-  background-color: #06b6d4;
+  background-color: #c9b458 !important;
   box-shadow: 0px 3px 0px #b59f3b !important;
   color: #ffffff !important;
 }
 .key.absent {
-  background-color: #334155;
-  box-shadow: 0px 3px 0px #111827 !important;
+  background-color: #787c7e !important;
+  box-shadow: 0px 3px 0px #3a3a3c !important;
   color: #ffffff !important;
 }
 .key:active {
